tests/error/bitwise_float.magi
// TEST: Bitwise ops on floats should error

main :: () -> i32 {
    a := 3.14 & 2.0
    return 0
}
